--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -16,6 +16,21 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.21</version>
         </dependency>
+
+        <!-- Spring AOP -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>5.3.21</version>
+        </dependency>
+
+        <!-- AspectJ Weaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version>
+        </dependency>
+
     </dependencies>
 
 </project>
